editing in some etats